# CodeDrift

./: .codedrift.yml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codedrift.yml
codedrift/: __init__.py  analyzer.py  cli.py  config.py  detector.py  models.py
docs/: PROJECT_STRUCTURE.md  USAGE.md
examples/: example_api.py
tests/: test_codedrift.py
