[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codedrift"
version = "0.1.0"
description = "Keep your code and documentation in perfect sync"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CodeDrift Team", email = "team@codedrift.dev"}
]
keywords = ["documentation", "drift", "sync", "code-quality", "devex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.4.2",
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.10.1",
    "mypy>=1.5.1",
    "pytest-cov>=4.1.0",
    "flake8>=6.0",
]

[project.urls]
Repository = "https://github.com/codedrift/codedrift"
Documentation = "https://docs.codedrift.dev"
Issues = "https://github.com/codedrift/codedrift/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=codedrift --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["codedrift"]
omit = ["*/tests/*"]
